Implement IGameEngine interface and modernize architecture
Introduced the IGameEngine interface for improved decoupling and testability, implemented it in GameSparker, and added GameEngineFactory for dependency injection. Migrated from legacy Applet APIs to modern Swing and event listeners, updated xtGraphics and RunApp for compatibility, and enhanced stage tracking. Updated project configuration for Java 11 compliance and improved documentation in README.md.